<resources>
    <string name="app_name">HelloWorld</string>
    <string-array name="spin_arr">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="report_spin_arr">
        <item>신고 사유1</item>
        <item>신고 사유2</item>
        <item>신고 사유3</item>
        <item>신고 사유4</item>
        <item>기타</item>
    </string-array>
    <string name="a1">로그인</string>
    <string name="a2">회원가입</string>
    <string name="a3">이메일</string>
    <string name="a3_1">비밀번호</string>
    <string name="a3_2">4~16자리</string>
    <string name="a4">이름</string>
    <string name="a5">휴대폰 번호</string>
    <string name="a6">성별</string>
    <string name="a7">회원가입</string>
    <string name="a8">남</string>
    <string name="a9">여</string>
    <string name="a10">확인</string>
    <string name="a11">종료</string>

    <string name="b1">근처 호스트 목록</string>
    <string name="b2">검색</string>
    <string name="b3">호스팅하지 않음</string>
    <string name="b4">아마도 호스팅 가능</string>
    <string name="b5">호스팅 가능</string>
    <string name="b6">사용 가능 언어</string>

    <string name="c1">프로필 수정하기</string>
    <string name="c2">저장</string>
    <string name="c3">본인 정보</string>
    <string name="c3_1">본인 이름</string>
    <string name="c3_2">본인 소개</string>
    <string name="c4">관심사</string>
    <string name="c4_1">관심사에 대한 정보</string>
    <string name="c5">Hello World!를 하는 이유</string>
    <string name="c6">음악, 책, 영화</string>
    <string name="c7">감명깊은 경험</string>
    <string name="c8">호스트에게 해줄 수 있는 것</string>
    <string name="c9">방문한 국가</string>
    <string name="c10">거주했던 국가들</string>
    <string name="c11">유창한 언어</string>
    <string name="c12">배우고 있는 언어</string>
    <string name="c13">직업</string>
    <string name="c14">교육</string>
    <string name="c15">고향</string>
    <string name="c16">주소</string>
    <string name="c17">도시</string>
    <string name="c18">국가</string>
    <string name="c19">우편 번호</string>
    <string name="c20">상세 주소 기재</string>
    <string name="c21">호스팅 선호도</string>
    <string name="c22">호스팅하지 않음</string>
    <string name="c23">아마도 호스팅 가능</string>
    <string name="c24">호스팅 가능</string>
    <string name="c25">수용 가능 손님 수</string>
    <string name="c26">선호 성별</string>
    <string name="c27">남성</string>
    <string name="c28">여성</string>
    <string name="c29">상관없음</string>
    <string name="c30">예</string>
    <string name="c31">아니오</string>
    <string name="c32">아이 수용가능</string>
    <string name="c33">동물 수용가능</string>
    <string name="c34">휠체어 수용 가능</string>
    <string name="c35">흡연 가능</string>
    <string name="c36">호스팅 정보</string>
    <string name="c37">아이가 있습니다</string>
    <string name="c38">동물을 키웁니다</string>
    <string name="c39">흡연자입니다</string>
    <string name="c40">취침 제공 방식</string>
    <string name="c41">동거 인원 현황</string>
    <string name="c42">주변 교통편</string>
    <string name="c43">손님에게 제공할 수 있는 것</string>
    <string name="c44">그 외 알리고 싶은 사항</string>

    <string name="d1">이름</string>
    <string name="d2">장소</string>
    <string name="d3">날짜</string>
    <string name="d4">인원</string>
    <string name="d5">이벤트명을 입력하세요</string>
    <string name="d6">예)서울 양천구 신정동 한신포차</string>
    <string name="d7">예)2019년 08월 20일 20시</string>
    <string name="d8">예)20</string>
    <string name="d9">이벤트를 소개하세요</string>
    <string name="d10">저장</string>

    <string name="e1">주최자</string>
    <string name="e2">이벤트 참여하기</string>



    <string name="report_prompt">신고 사유를 선택해주세요</string>
    <string name="f1">신고 내용을 자세히 작성해주세요</string>
    <string name="f2">완료</string>

    <string name="g1">이름</string>
    <string name="g2">주소 정보</string>
    <string name="g3">숙박 요청하기</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>