<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#16a085">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:gravity="center"
                android:orientation="vertical"
        >
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" android:background="@drawable/rounded" android:paddingStart="10dp"
                    android:gravity="center_vertical">
                <TextView
                        android:id="@+id/signEmailText"
                        android:text="@string/a3"
                        android:textSize="14sp"
                        android:gravity="fill"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="15dp"
                        android:layout_width="100dp"
                        android:layout_height="25dp" android:background="@drawable/border_right"/>
                <EditText
                        android:id="@+id/signEmailEdit"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:inputType="textEmailAddress"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content" android:backgroundTint="@android:color/background_light"
                        android:hint="abc@email.com"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" android:background="@drawable/rounded" android:paddingStart="10dp"
                    android:gravity="center_vertical">
                <TextView
                        android:id="@+id/signPwText"
                        android:text="@string/a3_1"
                        android:textSize="14sp"
                        android:gravity="fill"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="15dp"
                        android:layout_width="100dp"
                        android:layout_height="25dp" android:background="@drawable/border_right"/>
                <EditText
                        android:id="@+id/signPwEdit"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:inputType="textPassword"
                        android:layout_width="180dp"
                        android:layout_height="35dp" android:backgroundTint="@android:color/background_light"
                        android:hint="@string/a3_2"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" android:background="@drawable/rounded" android:paddingStart="10dp"
                    android:gravity="center_vertical">
                <TextView
                        android:id="@+id/signNameText"
                        android:text="@string/a4"
                        android:textSize="14sp"
                        android:gravity="fill"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="15dp"
                        android:layout_width="100dp"
                        android:layout_height="25dp" android:background="@drawable/border_right"/>
                <EditText
                        android:id="@+id/signNameEdit"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:inputType="textPersonName"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content" android:backgroundTint="@android:color/background_light"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" android:background="@drawable/rounded" android:paddingStart="10dp"
                    android:gravity="center_vertical">
                <TextView
                        android:id="@+id/signTelText"
                        android:text="@string/a5"
                        android:textSize="14sp"
                        android:gravity="fill"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="15dp"
                        android:layout_width="100dp"
                        android:layout_height="25dp" android:background="@drawable/border_right"/>
                <EditText
                        android:id="@+id/signTelEdit"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:inputType="phone"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content" android:backgroundTint="@android:color/background_light"
                        android:hint="010-1234-5678"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" android:background="@drawable/rounded" android:paddingStart="10dp"
                    android:gravity="center_vertical">
                <TextView
                        android:id="@+id/signGenderText"
                        android:text="@string/a6"
                        android:textSize="14sp"
                        android:gravity="fill"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="15dp"
                        android:layout_width="100dp"
                        android:layout_height="25dp" android:background="@drawable/border_right"/>
                <RadioGroup
                        android:layout_width="180dp"
                        android:layout_height="match_parent" android:orientation="horizontal"
                        android:id="@+id/gerderRadio">
                    <RadioButton
                            android:text="@string/a8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/radioMale"
                            android:layout_weight="1" android:buttonTint="#16a085"/>
                    <RadioButton
                            android:text="@string/a9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/radioFemale"
                            android:layout_weight="1" android:buttonTint="#16a085"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <Button
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/a10"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"
                        android:background="@drawable/rounded_login"
                        android:gravity="center"
                        android:layout_marginRight="10dp"
                        android:id="@+id/signinButton"/>

                <Button
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/a11"
                        android:textSize="18sp"
                        android:textColor="#16a085"
                        android:background="@drawable/rounded_login_white"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/CancelButton"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>